# ogmios

./: .envrc  .gitignore  .gitmodules  Dockerfile  README.md  SECURITY.md  docker-compose.yml  flake.nix
.github/workflows/: container-image.yaml  continuous-integration.yaml  network-synchronization.yaml  release-upload.yaml
clients/TypeScript/: package.json
docs/static/: cardano.json
perSystem/: devShells.nix  hydraJobs.nix  musl.nix  packages.nix  project.nix
server/: cabal.project  ogmios.cabal  package.yaml
server/src/Ogmios/: Prelude.hs
server/src/Ogmios/App/: Configuration.hs
server/src/Ogmios/Data/: EraTranslation.hs  Health.hs  Json.hs  Ledger.hs
server/test/integration/: ogmios-integration-tests.cabal
server/test/integration/src/: Main.hs
server/test/integration/src/Test/Integration/: Constitution.hs  DelegateRepresentatives.hs  Env.hs  Epoch.hs  LedgerTip.hs  LiveStakeDistribution.hs  NetworkTip.hs  ProtocolParameters.hs  RewardAccountSummaries.hs  StakePools.hs  Utxo.hs
server/test/unit/Test/: Generators.hs
server/test/vectors/QueryLedgerStateLiveStakeDistribution/: 001.json  002.json  003.json  004.json  005.json  006.json  007.json  008.json  009.json
server/test/vectors/QueryNetworkGenesisConfiguration/: 000.json  001.json  006.json  009.json  013.json
server/test/vectors/SubmitTransactionResponse/: 000.json  001.json  006.json  007.json  008.json  010.json  017.json  020.json  021.json  022.json  026.json  028.json  029.json  031.json  041.json  048.json  050.json  060.json  064.json  074.json  078.json  082.json  087.json  (+24 more)
(+35 files in other folders)
